--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
 
@@ -19,7 +20,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1">
                         <span class="navbar-toggler-icon"></span>
-                    </button> <a class="navbar-brand" href="#">Brand</a>
+                    </button> <a class="navbar-brand" href="./teste.html">Mapa</a>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
@@ -200,6 +201,58 @@
                 </table>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-md-6">
+
+                <h1>Listagem de Tabelas do Banco de Dados</h1>
+                <!-- <button id="loadTables">Carregar Tabelas</button> -->
+                <ul id="tablesList"></ul>
+            </div>
+        </div>
+
+        <script>
+            $(document).ready(function () {
+                function carregartables() {
+                    //  $('#loadTables').on('click', function () {
+                    $.ajax({
+                        url: 'php2.php',
+                        method: 'GET',
+                        dataType: 'json',
+                        success: function (response) {
+                            setTimeout(function () { carregartables() }, 10000)
+
+                            $('#tablesList').empty();
+
+                            if (response.error) {
+                                $('#tablesList').append('<li>' + response.error + '</li>');
+                            } else {
+                                $.each(response, function (index, table) {
+                                    $('#tablesList').append('<li>' + table + '</li>');
+                                });
+                            }
+                        },
+                        error: function () {
+                            alert('Erro ao buscar as tabelas.');
+                        }
+                    });
+                    //   });
+
+
+                    console.log('teste 10 segundos');
+                }
+                carregartables();
+
+
+
+
+            });
+
+
+        </script>
+
+
         <div class="row">
             <div class="col-md-12">
                 <h3>
@@ -208,6 +261,11 @@
             </div>
         </div>
     </div>
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
