--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 function carregartables() {
                     //  $('#loadTables').on('click', function () {
                     $.ajax({
-                        url: 'php2.php',
+                        url: 'php.php',
                         method: 'GET',
                         dataType: 'json',
                         success: function (response) {
