--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     <a class="nav-link active" aria-current="page" href="./teste.html">Teste</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link" href="./painel.html">Painel</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
