--- a/painel.html
+++ b/painel.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h3>
-                    h3. Lorem ipsum dolor sit amet.
+                    Painel de Controle
                 </h3>
                 <form role="form">
                     <div class="form-group">
@@ -199,7 +199,7 @@
                 <h1>Listagem de Tabelas do Banco de Dados</h1>
                 <!-- <button id="loadTables">Carregar Tabelas</button> -->
                 <ul id="tablesList"></ul>
-            </div>
+            </div>h3. Lorem ipsum dolor sit amet.
         </div>
 
         <script>
@@ -243,10 +243,12 @@
         </script>
 
 
-        <div class="row">
-            <div class="col-md-12">
+        <div class="row d-flex ">
+            <div class="col-md-12    ">
                 <h3>
-                    h3. Lorem ipsum dolor sit amet.
+
+                    Confira mais projetos By <a href="https://redminton.github.io"> redminton.cloud!
+                    </a>
                 </h3>
             </div>
         </div>
