--- a/teste.html
+++ b/teste.html
@@ -25,7 +25,7 @@
     <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCilGvyLOyIkVM6UqxNZdg4XhIXEbyM0j4">
         </script>
-    <script type=" text/javascript" src="js/pontos.js">
+    <script type=" text/javascript" src="pontos.js">
     </script>
 </head>
 
@@ -78,7 +78,7 @@
 
 
 
-    <script src="js/pontos.js"></script>
+    <script src="pontos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
