--- a/index.html
+++ b/index.html
@@ -1,266 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-    <title>Mapinha</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Quale</title>
+    <style>
+        #map {
+            width: 100%;
+            height: 100vh;
+        }
 
+        .sidebar {
+            height: 100vh;
+            background-color: #adc4db;
+            padding: 20px;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="./index.html">index</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./teste.html">Teste</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./painel.html">Painel</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Dropdown
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li>
-                                            <hr class="dropdown-divider">
-                                        </li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link disabled" href="#" tabindex="-1"
-                                        aria-disabled="true">Disabled</a>
-                                </li>
-                            </ul>
-
-                        </div>
-                    </div>
-                </nav>
+            <!-- Barra lateral -->
+            <div class="col-3 sidebar d-flex flex-column">
+                <h5>Menu de Navegação</h5>
+                <button class="btn btn-primary mb-2">Acessar</button>
+                <button class="btn btn-secondary mb-2">Ver Preços</button>
+                <button class="btn btn-success mb-2">Botão 3</button>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h3>
-                    h3. Lorem ipsum dolor sit amet.
-                </h3>
-                <form role="form">
-                    <div class="form-group">
 
-                        <label for="exampleInputEmail1">
-                            Email address
-                        </label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" />
-                    </div>
-                    <div class="form-group">
-
-                        <label for="exampleInputPassword1">
-                            Password
-                        </label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" />
-                    </div>
-                    <div class="form-group">
-
-                        <label for="exampleInputFile">
-                            File input
-                        </label>
-                        <input type="file" class="form-control-file" id="exampleInputFile" />
-                        <p class="help-block">
-                            Example block-level help text here.
-                        </p>
-                    </div>
-                    <div class="checkbox">
-
-                        <label>
-                            <input type="checkbox" /> Check me out
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">
-                        Submit
-                    </button>
-                </form>
-            </div>
-            <div class="col-md-6">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                #
-                            </th>
-                            <th>
-                                Product
-                            </th>
-                            <th>
-                                Payment Taken
-                            </th>
-                            <th>
-                                Status
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                01/04/2012
-                            </td>
-                            <td>
-                                Default
-                            </td>
-                        </tr>
-                        <tr class="table-active">
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                01/04/2012
-                            </td>
-                            <td>
-                                Approved
-                            </td>
-                        </tr>
-                        <tr class="table-success">
-                            <td>
-                                2
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                02/04/2012
-                            </td>
-                            <td>
-                                Declined
-                            </td>
-                        </tr>
-                        <tr class="table-warning">
-                            <td>
-                                3
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                03/04/2012
-                            </td>
-                            <td>
-                                Pending
-                            </td>
-                        </tr>
-                        <tr class="table-danger">
-                            <td>
-                                4
-                            </td>
-                            <td>
-                                TB - Monthly
-                            </td>
-                            <td>
-                                04/04/2012
-                            </td>
-                            <td>
-                                Call in to confirm
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-md-6">
-
-                <h1>Listagem de Tabelas do Banco de Dados</h1>
-                <!-- <button id="loadTables">Carregar Tabelas</button> -->
-                <ul id="tablesList"></ul>
-            </div>
-        </div>
-
-        <script>
-            $(document).ready(function () {
-                function carregartables() {
-                    //  $('#loadTables').on('click', function () {
-                    $.ajax({
-                        url: 'php/php2.php',
-                        method: 'GET',
-                        dataType: 'json',
-                        success: function (response) {
-                            setTimeout(function () { carregartables() }, 10000)
-
-                            $('#tablesList').empty();
-
-                            if (response.error) {
-                                $('#tablesList').append('<li>' + response.error + '</li>');
-                            } else {
-                                $.each(response, function (index, table) {
-                                    $('#tablesList').append('<li>' + table + '</li>');
-                                });
-                            }
-                        },
-                        error: function () {
-                            alert('Erro ao buscar as tabelas.');
-                        }
-                    });
-                    //   });
-
-
-                    console.log('teste 10 segundos');
-                }
-                carregartables();
-
-
-
-
-            });
-
-
-        </script>
-
-
-        <div class="row">
-            <div class="col-md-12">
-                <h3>
-                    h3. Lorem ipsum dolor sit amet.
-                </h3>
+            <!-- Mapa do Google -->
+            <div class="col-9">
+                <div id="map"></div>
             </div>
         </div>
     </div>
 
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCilGvyLOyIkVM6UqxNZdg4XhIXEbyM0j4"></script>
+    <script src="index.js">
+    </script>
 
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
