--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
             <!-- Barra lateral -->
             <div class="col-3 sidebar d-flex flex-column">
                 <h5>Menu de Navegação</h5>
-                <button class="btn btn-primary mb-2">Acessar</button>
+                <a href="./php/login/conectar.php"><button class="btn btn-primary mb-2">Acessar</button></a>
                 <button class="btn btn-secondary mb-2">Ver Preços</button>
                 <button class="btn btn-success mb-2">Botão 3</button>
             </div>
 
-            <!-- Mapa do Google -->
+
+
+
+
+
             <div class="col-9">
                 <div id="map"></div>
             </div>
