--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
             <div class="col-3 sidebar d-flex flex-column">
                 <h5>Menu de Navegação</h5>
                 <a href="./php/login/conectar.php"><button class="btn btn-primary mb-2">Acessar</button></a>
-                <button class="btn btn-secondary mb-2">Ver Preços</button>
-                <button class="btn btn-success mb-2">Botão 3</button>
+                <button class="btn btn-secondary mb-2" onclick="precos()">Ver Preços</button>
+                <a href="./php/postos.php"><button class="btn btn-success mb-2">Ver Xml Pontos de Interesse</button></a>
+                <a href="painel.html"><button class="btn btn-success mb-2">Acessar Painel de Controle</button></a>
+                <a href="usuario.html"><button class="btn btn-success mb-2">Acessar Painel do usuario</button></a>
+                <a href="teste.html"><button class="btn btn-success mb-2">Acessar teste</button></a>
+                <a href="php/login/logout.php"><button class="btn btn-success mb-2">Desconectar Sessão</button></a>
             </div>
-
-
 
 
 
