--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
@@ -22,6 +21,7 @@
             padding: 20px;
         }
     </style>
+
 </head>
 
 <body>
@@ -31,28 +31,50 @@
             <div class="col-3 sidebar d-flex flex-column">
                 <h5>Menu de Navegação</h5>
                 <a href="./php/login/conectar.php"><button class="btn btn-primary mb-2">Acessar</button></a>
-                <button class="btn btn-secondary mb-2" onclick="precos()">Ver Preços</button>
                 <a href="./php/ponto/pontos2.php"><button class="btn btn-success mb-2">Ver Xml Pontos de
                         Interesse</button></a>
                 <a href="teste.html"><button class="btn btn-success mb-2">Acessar teste</button></a>
+                <a href="php/usuario/usuario.html"><button class="btn btn-success mb-2">Cadastrar Usuario</button></a>
                 <a href="php/login/logout.php"><button class="btn btn-success mb-2">Desconectar Sessão</button></a>
+
+                <div class="sidebar-form">
+                    <h6>Escolha o tipo de gasolina:</h6>
+                    <select id="gasolinaTipo" class="form-select">
+                        <option value="price1">Gasolina Comum</option>
+                        <option value="price2">Gasolina Aditivada</option>
+                        <option value="price3">Etanol</option>
+                        <option value="price4">Diesel 500</option>
+                        <option value="price5">Diesel 10</option>
+                    </select>
+                    <button class="btn btn-primary mb-2" onclick="atualizarTabela()">Acessar</button>
+                </div>
             </div>
-
-
-
 
             <div class="col-9">
                 <div id="map"></div>
+                <div class="table-container">
+                    <h4>Tabela de Pontos de Interesse Ordenados</h4>
+                    <table id="tabelaPontos" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Nome do Ponto</th>
+                                <th>Cidade</th>
+                                <th>Endereço</th>
+                                <th>Preço</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- As linhas serão preenchidas dinamicamente com os pontos -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCilGvyLOyIkVM6UqxNZdg4XhIXEbyM0j4"></script>
-    <script src="index.js">
-    </script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
