--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <option value="price4">Diesel 500</option>
                         <option value="price5">Diesel 10</option>
                     </select>
-                    <button class="btn btn-primary mb-2" onclick="atualizarTabela()">Acessar</button>
+                    <button class="btn btn-primary mb-2" onclick="Tabela()">Acessar</button>
                 </div>
             </div>
 
