--- a/php/usuario/usuario.html
+++ b/php/usuario/usuario.html
@@ -40,10 +40,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link " href="home.php">Voltar</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link " href="logout.php">Sair</a>
+                                    <a class="nav-link " href="../login/logout.php">Sair</a>
                                 </li>
                             </ul>
 
