--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Qualé</title>
+    <link rel="shortcut icon" type="imagex/png" href="./img/logo.png">
 
     <style>
         body {
@@ -105,7 +106,6 @@
                 <a href="./php/login/conectar.php"><button class="btn btn-primary mb-2">Acessar</button></a>
                 <a href="./php/ponto/pontos2.php"><button class="btn btn-success mb-2">Ver Xml Pontos de
                         Interesse</button></a>
-                <a href="php/usuario/usuario.html"><button class="btn btn-success mb-2">Cadastrar Usuario</button></a>
                 <a href="php/login/logout.php"><button class="btn btn-success mb-2">Desconectar Sessão</button></a>
 
                 <div class="sidebar-form">
