--- a/php/usuario/usuario.html
+++ b/php/usuario/usuario.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <title>Cadastrar Usuario</title>
+    <title>Qualé Cadastro Usuário</title>
+    <link rel="shortcut icon" type="imagex/png" href="../../img/logo.png">
     <style>
-        #map {
-            width: 100%;
-            height: 100vh;
+        body {
+            padding: 20px;
+            background-color: #D3F8E2;
         }
 
-        .sidebar {
-            height: 100vh;
-            background-color: #adc4db;
-            padding: 20px;
+        h1 {
+            margin-bottom: 30px;
+        }
+
+        .rodape {
+            background-color: #198754;
+            text-align: center;
+            padding: 10px;
+            color: white;
+
+            bottom: 0;
+            width: 100%;
+        }
+
+        .rodape a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .rodape h5 {
+            margin: 0;
+        }
+
+        .navbar-brand img {
+            max-width: 50px;
+            height: auto;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .form-container {
+            display: block;
+            /* Esconde os formulários inicialmente */
+            animation: slideIn 0.5s forwards;
         }
     </style>
 </head>
@@ -29,21 +61,23 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../../index.html">Menu inicial</a>
+                        <a class="navbar-brand" href="../../index.html">
+                            <img src="../../img/logo.png" alt="Logo">
+                            <span>Qualé</span>
+                        </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link " href="../login/logout.php">Sair</a>
+                                    <a class="nav-link" href="../../">Voltar</a>
                                 </li>
                             </ul>
-
                         </div>
                     </div>
                 </nav>
@@ -60,7 +94,7 @@
 
                 <!-- Conteúdo Principal -->
                 <div class="col-md-10">
-                    <h1 class="text-center">Painel de Usuario</h1>
+
 
                     <div id="formUsuario" class="form-container">
                         <h2>Gerenciar Usuários</h2>
@@ -102,19 +136,13 @@
 
                 </div>
             </div>
-        </div>
+        </div><br>
+
+    </div>
+    <div class="rodape">
+        <h5>Confira mais projetos By <a href="https://redminton.github.io" target="_blank">redminton.cloud!</a></h5>
     </div>
 
-    <!--<div class="row d-flex ">
-            <div class="col-md-12    ">
-                <h3>
-
-                    Confira mais projetos By <a href="https://redminton.github.io"> redminton.cloud!
-                    </a>
-                </h3>
-            </div>
-        </div>
-    </div>-->
 
 
 
